Bug 301588 - [testcase] focus frame on bugs.kde.org is far too big - khtml only, webkit ok
Summary: [testcase] focus frame on bugs.kde.org is far too big - khtml only, webkit ok
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.13.1
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL: http://bugs.kde.org
Keywords: testcase
Depends on:
Blocks:
 
Reported: 2012-06-10 16:49 UTC by Jonathan Marten
Modified: 2014-06-10 16:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.3
Sentry Crash Report:


Attachments
khtml - enormous focus frame (208.78 KB, image/png)
2012-06-10 16:52 UTC, Jonathan Marten
Details
webkit - correct frame (206.99 KB, image/png)
2012-06-10 16:52 UTC, Jonathan Marten
Details
reduced testcase (285 bytes, text/html)
2012-11-09 22:58 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2012-06-10 16:49:56 UTC
When viewing a bug report on bugs.kde.org in KHTML view mode, the focus frame is excessively wide (guessing at least 6 pixels) and obtrusive.  See attached screen shots.

Have only observed this on bugs.kde.org, no other websites.  But the focus frame is OK in WebKit view mode, so assuming that it is a KHTML problem.  This happens with all type of focusable page elements apart from text fields.

The same problem shows whatever the desktop style in use (tried with Oxygen and Cleanlooks).


Reproducible: Always

Steps to Reproduce:
View a bugs.kde.org page in Konqueror with KHTML view mode.

Actual Results:  
See screen shots.


Expected Results:  
Focus frame drawn correctly for style in use.
Comment 1 Jonathan Marten 2012-06-10 16:52:18 UTC
Created attachment 71704 [details]
khtml - enormous focus frame
Comment 2 Jonathan Marten 2012-06-10 16:52:42 UTC
Created attachment 71705 [details]
webkit - correct frame
Comment 3 Andrea Iacovitti 2012-11-09 22:58:38 UTC
Created attachment 75143 [details]
reduced testcase
Comment 4 Andrea Iacovitti 2014-06-10 16:30:10 UTC
Git commit ca11720e0179897fe1bec6af7a5e2e4305aba4ad by Andrea Iacovitti.
Committed on 10/06/2014 at 16:06.
Pushed by aiacovitti into branch 'KDE/4.13'.

Rework parseShortHand() to be able to reject shorthand in case:
- number of values is greater than the maximum expected
- there is more than one value that apply to the same subproperty

When rejected clean up from valid subproperties added while parsing.
Related: bug 189774, bug 274534
FIXED-IN: 4.13.3

M  +41   -13   khtml/css/cssparser.cpp
M  +1    -1    khtml/css/cssparser.h

http://commits.kde.org/kdelibs/ca11720e0179897fe1bec6af7a5e2e4305aba4ad