Rework parseShortHand() to be able to reject shorthand in case: - number of values is greater than the maximum expected - there is more than one value that apply to the same subproperty

When rejected clean up from valid subproperties added while parsing.

BUG: 301588
BUG: 189774
BUG: 274534
FIXED-IN: 4.13.3